--- a/components/footer.mjml
+++ b/components/footer.mjml
@@ -1,7 +1,7 @@
     <mj-raw>
       <!-- Footer -->
     </mj-raw>
-    <mj-wrapper padding="40px 50px 100px" background-color="#f5f5f5">
+    <mj-wrapper padding-top="40px" padding-bottom="100px" background-color="#f5f5f5" css-class="padding">
       <mj-section padding-top="66px">
         <mj-column>
           <mj-image width="30px" padding="0" align="left" src="https://raw.githubusercontent.com/shihobyrd/transactional-email-adobe/main/assets/Adobe-footer-logo.png" alt="Adobe" title="Adobe" />
